@@ -10,7 +10,6 @@ import org.springframework.stereotype.Service;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -54,7 +53,7 @@ public class AvaliacaoService {
     public List<ResponseAvaliacaoDTO> listarTodos() {
         return avaliacaoRepository.findAll().stream()
                 .map(ResponseAvaliacaoDTO::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public ResponseAvaliacaoDTO buscarPorId(UUID id) {
